<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"


        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="8dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/text"
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:layout_marginTop="32dp"
                android:text="@string/Display"
                android:textAlignment="center"
                android:textColor="@color/yellow"
                android:textSize="20sp"

                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <TextView

                android:id="@+id/text1"
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:layout_marginTop="64dp"
                android:background="@color/darkgreen"
                android:text="@string/prepaymentsystem"
                android:textAlignment="center"
                android:textColor="@color/yellow"
                android:textSize="20sp"
                android:clickable="true"
                android:onClick="prepaymentopen"


                />


            <TextView

                android:id="@+id/text2"
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:layout_marginTop="79dp"
                android:background="@color/darkgreen"
                android:clickable="true"
                android:onClick="howtobuy"
                android:text="@string/howtobuyelectricity"
                android:textAlignment="center"
                android:textColor="@color/yellow"


                android:textSize="20sp" />

            <TextView

                android:id="@+id/text3"
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:layout_marginTop="79dp"
                android:background="@color/darkgreen"
                android:clickable="true"
                android:text="@string/vutsela"
                android:textAlignment="center"
                android:onClick="vutselapdfopen"
                android:textColor="@color/yellow"


                android:textSize="20sp"
                tools:ignore="OnClick" />



            <TextView

                android:id="@+id/text4"
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:layout_marginTop="64dp"
                android:background="@color/darkgreen"
                android:text="@string/purchaseorder"
                android:textAlignment="center"
                android:textColor="@color/yellow"
                android:textSize="20sp"
                android:clickable="true"
                android:onClick="purchaseorderT"


                />




        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>